# memos

./: .gitignore  .pnp.cjs  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
import-memos/: index.ts
pages/: _app.tsx  index.module.scss  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  things3.rs
